# -ru-smb-it-budget-planner

./: .coverage  README.md  README.ru.md  infra.yaml  pricing.yaml  pyproject.toml  report.txt
.github/workflows/: ci.yml
examples/: infra.yaml  pricing.yaml
examples/it_services_hybrid/: infra.yaml  pricing.yaml
examples/small_retail_on_prem/: infra.yaml  pricing.yaml
ru_smb_it_budget_planner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: dsl.py  engine.py  main.py  pricing.py  reporting.py  scenarios.py
src/ru_smb_it_budget_planner/: cli.py
src/ru_smb_it_budget_planner/ai_interface/: infra_text_to_yaml_stub.py  report_text_generator_stub.py
src/ru_smb_it_budget_planner/calculator/: cloud_calc.py  energy_calc.py  on_prem_calc.py  scenario_builder.py
src/ru_smb_it_budget_planner/dsl/: parser.py  schema.yaml  schema_generator.py
src/ru_smb_it_budget_planner/models/: infra_model.py  pricing_model.py
src/ru_smb_it_budget_planner/reporting/: owner_report_ru.py  tables.py
tests/: test_calculators.py  test_dsl.py  test_dsl_validation.py  test_engine.py  test_pricing.py  test_reporting.py  test_scenarios.py
